# TheGameBackEnd

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env-sample  game  main.py  pyproject.toml  requirements.in  requirements.txt
config/: settings.py  urls.py
players/: DAO.py  admin.py  apps.py  async_atomic.py  meta.py  models.py  serializers.py  services.py  urls.py  views.py
players/management/commands/: csu.py
players/migrations/: 0001_initial.py
