[project]
name = "thegamebackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "adrf>=0.1.9",
    "aiohttp>=3.12.15",
    "asgiref==3.9.1",
    "build==1.3.0",
    "click==8.2.1",
    "django==5.2.5",
    "django-cors-headers>=4.7.0",
    "djangorestframework==3.16.1",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "packaging==25.0",
    "pandas>=2.3.2",
    "pip==25.2",
    "pip-tools==7.5.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "setuptools==80.9.0",
    "sqlparse==0.5.3",
    "uvicorn>=0.35.0",
    "wheel==0.45.1",
]
